mobile > removed audio height and padding to see if that fixes it getting cut off on the bottom of the screen

--- a/style.css
+++ b/style.css
@@ -545,6 +545,9 @@ tr.excerpt td {
     display: block;
     background-color: var(--beige);
     bottom: 0;
+    /* attempts to fix issue where audio is getting cut off: */
+    height: auto;
+    padding: 0; 
   }
 
   .excerpt {
